--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Part 1: Let's get started\n",
-    "## Importing some libraries\n",
-    "Import tensorflow, numpy, matplotlib.pyplot "
+    "## Importing some libraries"
    ]
   },
   {
@@ -14,7 +13,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,7 +35,10 @@
     "def visualize_digit(img):\n",
     "    \"\"\"\n",
     "    Display the vector as a 28*28 grayscale image.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    img = img.reshape((28,28))\n",
+    "    plt.imshow(img, cmap=\"gray\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -52,14 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-1-0bb00c0139c7>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-0bb00c0139c7>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    num_samples = len(labels)\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def generate_onehot_vector(labels):\n",
     "    \"\"\"\n",
     "    Returns the onehot encoding of the labels.\n",
-    "    \"\"\""
+    "    \"\"\"\n"
    ]
   },
   {
@@ -77,10 +92,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = \n",
-    "y_train = \n",
-    "X_test = \n",
-    "y_test = "
+    "X_train = np.load(\"X_train.npy\")[:20000,:]\n",
+    "y_train = np.load(\"y_train.npy\")[:20000]\n",
+    "X_test = np.load(\"X_test.npy\")[:2000,:]\n",
+    "y_test = np.load(\"y_test.npy\")[:2000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the first trainig sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualize_digit(X_train[0])"
    ]
   },
   {
@@ -96,7 +127,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train_onehot = "
+    "y_train_onehot = generate_onehot_vector(y_train)\n",
+    "y_test_onehot = vectoried_generate_onehot_vector(y_test)"
    ]
   },
   {
@@ -114,12 +146,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = \n",
-    "iterations = \n",
-    "layer_1_nodes =\n",
-    "layer_2_nodes = \n",
-    "layer_3_nodes = \n",
-    "layer_4_nodes = "
+    "learning_rate = 0.1\n",
+    "iterations = 1000\n",
+    "layer_1_nodes = 150\n",
+    "layer_2_nodes = 150\n",
+    "layer_3_nodes = 150\n",
+    "layer_4_nodes = 10"
    ]
   },
   {
@@ -156,7 +188,8 @@
     "w1 = \n",
     "b1 = \n",
     "\n",
-    "layer_1_output = "
+    "layer_1_output = \n",
+    "\n"
    ]
   },
   {
@@ -172,9 +205,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = \n",
-    "cost = \n",
-    "# cost = "
+    "prediction = layer_4_output\n",
+    "# cost = tf.losses.softmax_cross_entropy(logits=prediction, onehot_labels=Y)\n",
+    "cost = "
    ]
   },
   {
@@ -199,31 +232,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with tf.Session() as session:\n",
-    "    \n",
-    "    session.run(tf.global_variables_initializer())\n",
-    "    \n",
-    "    for i in range(iterations):\n",
-    "        \n",
-    "        \n",
-    "        if i % 20 == 0:\n",
-    "            training_cost = \n",
-    "            testing_cost =\n",
-    "            current_prediction = \n",
-    "            current_prediction = \n",
-    "            accuracy = \n",
-    "            \n",
-    "            \n",
+    "# saver = tf.train.Saver() # for part3\n",
     "\n",
-    "    final_training_cost = \n",
-    "    final_testing_cost =    "
+    "session = tf.InteractiveSession()\n",
+    "    \n",
+    "session.run(tf.global_variables_initializer())\n",
+    "    \n",
+    "for i in range(iterations):\n",
+    "    \n",
+    "        \n",
+    "    if i % 20 == 0:\n",
+    "        training_cost = \n",
+    "        current_prediction = \n",
+    "        current_prediction = \n",
+    "        accuracy = \n",
+    "        print(\"At iteration {}, the accuracy and cost are:\".format(i))\n",
+    "        print(\"The accuracy on the training set is\", accuracy)\n",
+    "        print(\"The current training cost: {}\\n\".format(training_cost))\n",
+    "            \n",
+    "# Training is now complete!\n",
+    "print(\"Training is complete!\")\n",
+    "\n",
+    "final_training_cost = \n",
+    "final_testing_cost = \n",
+    "\n",
+    "print(\"Final Training cost: {}\".format(final_training_cost))\n",
+    "print(\"Final Testing cost: {}\".format(final_testing_cost))\n",
+    "# saver.save(session, \"./tmp/model.ckpt\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 3: Use pre-trained model to do classification"
+    "# (Extra)Part 3: Save \n",
+    "https://www.tensorflow.org/guide/saved_model"
    ]
   },
   {
@@ -232,12 +276,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "saver = tf.train.Saver()\n",
+    "\n",
     "with tf.Session() as session:\n",
     "    saver.restore(session, \"./tmp/model.ckpt\")\n",
     "    current_prediction = session.run(prediction, feed_dict={X: X_test, Y:y_test_onehot})\n",
     "    current_prediction = np.argmax(current_prediction, axis=1)\n",
     "    accuracy = sum(current_prediction==y_test) / len(y_test)\n",
     "    print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "session = tf.InteractiveSession()\n",
+    "saver.restore(session, \"./tmp/model.ckpt\")\n",
+    "current_prediction = session.run(prediction, feed_dict={X: X_test, Y:y_test_onehot})\n",
+    "current_prediction = np.argmax(current_prediction, axis=1)\n",
+    "accuracy = sum(current_prediction==y_test) / len(y_test)\n",
+    "print(accuracy)"
    ]
   },
   {
@@ -274,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
